Fix spillover on comment index page

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -466,7 +466,7 @@ h4.example-link {
     padding: 0 0 10px 0;
     display: inline-block;
     width: 300px;
-    margin-right: 56px;
+    margin-right: 50px;
     background: rgba(255,255,255,0.7);
     text-align: center;
     @include rounded(4px);
